# crustcrawler_smart_arm

./: README.md
smart_arm_controller/: CMakeLists.txt  package.xml
smart_arm_controller/launch/: smart_arm.launch
smart_arm_description/: CMakeLists.txt  package.xml  smart_arm_controllers.yaml  smart_arm_gazebo.launch
smart_arm_description/launch/: smart_arm_gazebo.launch  smart_arm_gazebo_pickup.launch
smart_arm_description/meshes/collada/: arm_base_decimated.dae  arm_elbow_flex_decimated.dae  arm_left_finger_decimated.dae  arm_right_finger_decimated.dae  arm_shoulder_pan_decimated.dae  arm_shoulder_pitch_decimated.dae  arm_wrist_roll_decimated.dae
smart_arm_description/scripts/: smart_arm_pickup.py  smart_arm_teleop_keyboard.py
smart_arm_description/urdf/: smart_arm.xacro  smart_arm_robot.xacro
smart_arm_description/worlds/: box.world
smart_arm_kinematics/: CMakeLists.txt  package.xml
