cmake_minimum_required(VERSION 2.8.3)
project(smart_arm_controller)
find_package(catkin REQUIRED COMPONENTS rospy dynamixel_controllers)
catkin_package(CATKIN_DEPENDS rospy dynamixel_controllers)
install(DIRECTORY config DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/)
install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/)
install(PROGRAMS scripts/make_cobra_pose.py DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
