<?xml version="1.0"?>
<package>
  <name>smart_arm_controller</name>
  <version>0.0.0</version>
  <description>Crust Crawler AX-12+ Smart Arm controller that uses dynamixel_controllers for motor control</description>

  <maintainer email="somebody@gmail.com">Some Body</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/smart_arm_controller</url>
  <url type="bugtracker">https://github.com/pallegro/crustcrawler_smart_arm/issues</url>
  <url type="repository">https://github.com/pallegro/crustcrawler_smart_arm</url>

  <author email="somebody@gmail.com">Antons Rebguns</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
