<?xml version="1.0"?>
<package>
  <name>smart_arm_description</name>
  <version>0.0.0</version>
  <description>3D Meshes and URDF description for the CrustCrawler Smart Robotic Arm</description>

  <maintainer email="somebody@gmail.com">Some Body</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/smart_arm_description</url>
  <url type="bugtracker">https://github.com/pallegro/crustcrawler_smart_arm/issues</url>
  <url type="repository">https://github.com/pallegro/crustcrawler_smart_arm</url>

  <author email="somebody@gmail.com">Antons Rebguns</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>convex_decomposition</build_depend>
  <build_depend>ivcon</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>xacro</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
  </export>
</package>
