cmake_minimum_required(VERSION 2.8.3)
project(smart_arm_kinematics)
find_package(catkin REQUIRED COMPONENTS roscpp geometry_msgs tf urdf)
add_service_files(DIRECTORY srv FILES SmartArmIK.srv)
generate_messages(DEPENDENCIES geometry_msgs)
catkin_package(CATKIN_DEPENDS roscpp message_runtime geometry_msgs tf urdf)
add_executable(smart_arm_ik src/smart_arm_ik.cpp)
target_link_libraries(smart_arm_ik ${catkin_LIBRARIES})
add_executable(smart_arm_ik_service src/smart_arm_node.cpp)
target_link_libraries(smart_arm_ik_service ${catkin_LIBRARIES})
install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/)
catkin_install_python(PROGRAMS nodes/test_ik_service.py
  DESTINATION  ${CATKIN_PACKAGE_SHARE_DESTINATION}/nodes/test_ik_service.py)
#install(PROGRAMS nodes/test_ik_service.py
#  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/nodes/test_ik_service.py)
